--- a/custom.html
+++ b/custom.html
@@ -1,3 +1,7 @@
+<head>
+<link rel="stylesheet" type="text/css" href="https://cdn.rawgit.com/walke328/city-of-rockville-custom-stylesheet/79c4d96c/custom.css">
+</head>
+<body>
 <!-- Link List -->
 
 <div class="link-list">
@@ -135,3 +139,4 @@
     <div class="right-callout-col">
     </div>
 </div>
+</body>
