--- a/custom.html
+++ b/custom.html
@@ -1,5 +1,7 @@
+<!DOCTYPE html>
+<html>
 <head>
-<link rel="stylesheet" type="text/css" href="https://cdn.rawgit.com/walke328/city-of-rockville-custom-stylesheet/79c4d96c/custom.css">
+<link rel="stylesheet" type="text/css" href="https://cdn.rawgit.com/walke328/city-of-rockville-custom-stylesheet/83729a9d/custom.css">
 </head>
 <body>
 <!-- Link List -->
@@ -140,3 +142,4 @@
     </div>
 </div>
 </body>
+</html>
