--- a/pattern-library.html
+++ b/pattern-library.html
@@ -68,6 +68,7 @@ margin-top: 25px;
 
 </style>
 <body>
+<div style="width:700px">
 <h2> Link List </h2>
 <div class="link-list">
 	<a href="#">
@@ -123,5 +124,6 @@ margin-top: 25px;
         			</div>           
     			</div>
 	</div>
+</div>
 </div>
 </body>
