--- a/pattern-library.html
+++ b/pattern-library.html
@@ -65,10 +65,12 @@ margin-top: 25px;
     display: table-cell;
     vertical-align: middle; 
 }
-
+.container {
+	width: 700px;
+	}
 </style>
 <body>
-<div style="width:700px">
+<div class="container">
 <h2> Link List </h2>
 <div class="link-list">
 	<a href="#">
