--- a/pattern-library.html
+++ b/pattern-library.html
@@ -68,7 +68,33 @@ margin-top: 25px;
 .container {
 	width: 700px;
 	border: 1px solid #000;
+	margin: 20px;
 	}
+	.callout-blue {
+    max-width:500px;
+    margin: 0 0 10px 0;
+    background-color: #e5efff;
+    padding: 20px;
+}
+.callout-blue:hover {
+background-color: #d2e3ff;
+}
+.callout-blue a {
+text-decoration:none;
+}
+.callout-title {
+	color: #003399;
+    font-weight: bold;
+    font-size: 1.2em;
+    display: block;
+    padding: 0px 0px 10px 0px;
+    margin: 0px 0px 5px 0px;
+    font-family: arial;
+}
+.callout-description {
+color: #666666;
+font-family: arial;
+}
 </style>
 <body>
 <div class="container">
@@ -128,5 +154,21 @@ margin-top: 25px;
     			</div>
 	</div>
 </div>
+	<h2> Callout </h2> 
+	<br>
+	<div class="callout-blue">
+	<a href="#">
+    	<div class="callout-title">
+        Title
+        </div>
+        <div class="callout-description">
+        This is a short description. 
+        </div>
+    </a>
+</div>
+<br><br>
+	
+	
+	
 </div>
 </body>
