--- a/custom.html
+++ b/custom.html
@@ -495,3 +495,26 @@ body {
     </div>
 </div>
 
+<!-- Members Table -->
+<table id="members">
+  <tr>
+    <th>Name</th>
+    <th>Term Expiration</th>
+  </tr>
+  <tr>
+    <td>Lorem</td>
+    <td>Ipsum</td>
+  </tr>
+  <tr>
+    <td>Lorem</td>
+    <td>Ipsum</td>
+  </tr>
+  <tr>
+    <td>Lorem</td>
+    <td>Ipsum</td>
+  </tr>
+  <tr>
+    <td>Lorem</td>
+    <td>Ipsum</td>
+  </tr>
+</table>
