--- a/custom.html
+++ b/custom.html
@@ -418,14 +418,14 @@ body {
 <!-- Callout Blue -->
 
 <div class="callout-blue">
-	<a href="#">
-    	<div class="callout-title">
-        Title
-        </div>
-        <div class="callout-description">
-        This is a short description. 
-        </div>
-    </a>
+<a href="#" style="text-decoration:none">
+<div class="callout-title">
+Title
+</div>
+<div class="callout-description"><span style="font-weight: normal;">
+Description
+</span></div>
+</a>
 </div>
 <br><br>
 <!-- Primary Button -->
