--- a/custom.html
+++ b/custom.html
@@ -169,6 +169,6 @@ Description
     Title <br> Value Proposition
   </div>
   <div class="column _20">
-    <a class="primary-button" href="#" style="text-decoration: none; color: #fff;">Sign Up</a>
+    <a class="newsletter-button" href="#" style="text-decoration: none; color: #fff;">Sign Up</a>
   </div>
 </div>
