--- a/custom.html
+++ b/custom.html
@@ -76,6 +76,8 @@ Description
 <br><br>
 <!-- Yellow Alert -->
 <div class="yellow-alert yellow-alert-warning" >
+  <img src="/images/pages/N75/alert.png" style="width:50px; padding-left: 15px">
+  
   <div class="yellow-alert-body"><h3 class="yellow-alert-heading">Warning Status</h3><p class="yellow-alert-text">Lorem ipsum dolor sit amet, elit, sed do eiusmod.</p>
   </div>
 </div>
