--- a/custom.html
+++ b/custom.html
@@ -163,14 +163,14 @@ Description
 </table>
 
 <!-- Newsletter Callout -->
-<div class="row">
-  <div class="column _25">
+<div class="newsletter-row">
+  <div class="newsletter-column _25">
     <img src="">
   </div>
-  <div class="column _55">
+  <div class="newsletter-column _55">
     Title <br> Value Proposition
   </div>
-  <div class="column _20">
+  <div class="newsletter-column _20">
     <a class="newsletter-button" href="#" style="text-decoration: none; color: #fff;">Sign Up</a>
   </div>
 </div>
