--- a/custom.html
+++ b/custom.html
@@ -174,3 +174,12 @@ Description
     <a class="newsletter-button" href="#" style="text-decoration: none; color: #fff;">Sign Up</a>
   </div>
 </div>
+
+<! Card Callout -->
+  <aside class="cta-block card3">
+    <a class="cta-link " href="/404">
+		  <span class="cta-line1">Camp Guide</span>
+		  <span class="cta-line2">Let's Get Started</span>
+		  <span class="cta-line3">Register Now</span>
+	  </a>
+  </aside>
