--- a/custom.html
+++ b/custom.html
@@ -1,7 +1,7 @@
 <!-- Link List -->
 
 <div class="link-list">
-	<a href="#">
+	<a href="#" style="text-decoration: none">
     	<div class="link-title">
         Title
         </div>
@@ -71,7 +71,7 @@ Description
 <br><br>
 <!-- Primary Button -->
 
-<a class="primary-button" href="#">Button</a>
+<a class="primary-button" href="#" style="text-decoration: none; color: #fff">Button</a>
 
 <br><br>
 <!-- Yellow Alert -->
@@ -87,15 +87,15 @@ Description
 <div class="link-list-row-3">
   <div class="link-list-group">
    <h3 class="title-text">Categroy Title</h3>
-      Link <img class="img-icon" src="#">
+      Link <img class="img-icon" src="/images/pages/N75/external-link.png">
   </div>
   <div class="link-list-group">
    <h3 class="title-text">Categroy Title</h3>
-      Link <img class="img-icon" src="#">
+      Link <img class="img-icon" src="/images/pages/N75/external-link.png">
   </div>
   <div class="link-list-group">
    <h3 class="title-text">Categroy Title</h3>
-      Link <img class="img-icon" src="#">
+      Link <img class="img-icon" src="/images/pages/N75/external-link.png">
   </div>
 </div>
 <br><br>
@@ -107,11 +107,11 @@ Description
     <h3 class="report-title">Title</h3>
   <div class="report-row">
   <div class="report-column">
-    <p>Link <img class="img-icon" src="#"></p>
-    <p>Link <img class="img-icon" src="#"></p>
+    <p><a href="#" style="text-decoration:none; color: #666">Link <img class="img-icon" src="/images/pages/N75/external-link.png"></a></p>
+    <p><a href="#" style="text-decoration:none; color: #666">Link <img class="img-icon" src="/images/pages/N75/external-link.png"></a></p>
   </div>
   <div class="report-column">
-    <p>Link <img class="img-icon" src="#"></p>
+    <p>< href="#" style="text-decoration:none; color: #666">Link <img class="img-icon" src="/images/pages/N75/external-link.png"></a></p>
   </div>
 </div>
 </div>
@@ -120,7 +120,37 @@ Description
 
 <div class="info-steps-wrapper">
     <div class="left-step">
-         <img class="img-col" src="#">
+         <img class="img-col" src="/images/pages/N592/1.png">
+    </div>
+    <div class="step-info">
+      <span><h3 class="title-step"> Title </h3>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum non libero id augue </span>
+    </div>
+</div>
+<br><br>
+<div class="info-steps-wrapper">
+    <div class="left-step">
+         <img class="img-col" src="/images/pages/N592/2.png">
+    </div>
+    <div class="step-info">
+      <span><h3 class="title-step"> Title </h3>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum non libero id augue </span>
+    </div>
+</div>
+<br><br>
+<div class="info-steps-wrapper">
+    <div class="left-step">
+         <img class="img-col" src="/images/pages/N592/3.png">
+    </div>
+    <div class="step-info">
+      <span><h3 class="title-step"> Title </h3>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum non libero id augue </span>
+    </div>
+</div>
+<br><br>
+<div class="info-steps-wrapper">
+    <div class="left-step">
+         <img class="img-col" src="/images/pages/N836/4.png">
     </div>
     <div class="step-info">
       <span><h3 class="title-step"> Title </h3>
@@ -139,7 +169,7 @@ Description
 </div>
 
 <!-- Members Table -->
-<table id="members">
+<table id="members" style="width: 100%">
   <tr>
     <th>Name</th>
     <th>Term Expiration</th>
@@ -177,7 +207,7 @@ Description
 
 <! Card Callout -->
   <aside class="cta-block card3">
-    <a class="cta-link " href="/404">
+    <a class="cta-link " href="#">
 		  <span class="cta-line1">Camp Guide</span>
 		  <span class="cta-line2">Let's Get Started</span>
 		  <span class="cta-line3">Register Now</span>
