--- a/custom.html
+++ b/custom.html
@@ -22,7 +22,7 @@
                 <div class="contact-container">
 					<div class="contact-row">
         				<div class="contact-icon">
-            				<img style="width:35px" src="https://png.icons8.com/metro/1600/phone.png">
+            				<img style="width:35px" src="/images/pages/N75/phone.png" alt="phone.png">
             			</div>
                 		<div class="contact-items">
             				xxx-xxx-xxxx
@@ -30,15 +30,16 @@
         			</div>
         			<div class="contact-row">
         				<div class="contact-icon">
-            				<img style="width:35px" src="https://png.icons8.com/metro/1600/phone.png">
+            				<img style="width:35px" src="/images/pages/N75/email.png" alt="email.png">
             			</div>
             			<div class="contact-items">
-            				Email
+					<a style="text-decoration: none; color: #666699" href="mailto:email@rockvillemd.gov">
+					email@rockvillemd.gov</a>
             			</div>
         			</div>  
 					<div class="contact-row">
         				<div class="contact-icon">
-            				<img style="width:35px" src="https://png.icons8.com/metro/1600/phone.png">
+            				<img style="width:35px" src="/images/pages/N75/location.png" alt="location.png">
             			</div>
             			<div class="contact-items">
             				Address
@@ -46,7 +47,7 @@
        			 	</div>   
 					<div class="contact-row">
         				<div class="contact-icon">
-            				<img style="width:35px" src="https://png.icons8.com/metro/1600/phone.png">
+            				<img style="width:35px" src="/images/pages/N75/hours.png" alt="hours.png">
             			</div>
             			<div class="contact-items">
             				Hours
