--- a/custom.html
+++ b/custom.html
@@ -214,3 +214,12 @@ Description
 		  <span class="cta-line3">Register Now</span>
 	  </a>
   </aside>
+
+<!-- Information Alert -->
+<div class="blue-alert blue-alert-warning" >
+  <img src="/images/pages/N75/alert.png" style="width:50px; padding-left: 15px">
+  
+  <div class="blue-alert-body"><h3 class="blue-alert-heading">Warning Status</h3><p class="blue-alert-text">Lorem ipsum dolor sit amet, elit, sed do eiusmod.</p>
+  </div>
+</div>
+<br><br>
