--- a/custom.html
+++ b/custom.html
@@ -216,10 +216,12 @@ Description
   </aside>
 
 <!-- Information Alert -->
-<div class="blue-alert blue-alert-warning" >
-  <img src="/images/pages/N75/alert.png" style="width:50px; padding-left: 15px">
-  
-  <div class="blue-alert-body"><h3 class="blue-alert-heading">Warning Status</h3><p class="blue-alert-text">Lorem ipsum dolor sit amet, elit, sed do eiusmod.</p>
-  </div>
+<div class="blue-alert blue-alert-warning">
+	<img src="/images/pages/N2079/info.png" style="width:50px; padding-left: 15px">
+<div class="blue-alert-body">
+	<h3 class="blue-alert-heading">Applications Currently Closed</h3>
+	<p class="blue-alert-text">We are not currently accepting applications. Applications will be opened on [date].</p>
 </div>
-<br><br>
+</div>
+<br>
+<br>
