--- a/custom.html
+++ b/custom.html
@@ -18,7 +18,7 @@
 	</div>
     <div id="contact">
     	Still have questions? Contact:
-        <div class="title"> Title </div>
+        <div class="contact-title"> Title </div>
                 <div class="contact-container">
 					<div class="contact-row">
         				<div class="contact-icon">
