--- a/custom.html
+++ b/custom.html
@@ -195,14 +195,13 @@ Description
 
 <!-- Newsletter Callout -->
 <div class="newsletter-row">
-  <div class="newsletter-column _25">
-    <img src="">
+<div class="newsletter-column"> <img class="img-newsletter" src="/ImageRepository/Document?documentID=27424"></div>
+  <div class="newsletter-column">
+  Newsletter Title<br>
+  Value proposition
   </div>
-  <div class="newsletter-column _55">
-    Title <br> Value Proposition
-  </div>
-  <div class="newsletter-column _20">
-    <a class="newsletter-button" href="#" style="text-decoration: none; color: #fff;">Sign Up</a>
+<div class="newsletter-column">
+  <a class="newsletter-button" href="#" style="text-decoration: none; color: #fff">Button</a>
   </div>
 </div>
 
