--- a/custom.html
+++ b/custom.html
@@ -76,11 +76,9 @@ Description
 
 <br><br>
 <!-- Yellow Alert -->
-<div class="yellow-alert yellow-alert-warning" >
-  <img src="/images/pages/N75/alert.png" style="width:50px; padding-left: 15px">
-  
-  <div class="yellow-alert-body"><h3 class="yellow-alert-heading">Warning Status</h3><p class="yellow-alert-text">Lorem ipsum dolor sit amet, elit, sed do eiusmod.</p>
-  </div>
+<div class="yellow-alert yellow-alert-warning"><img src="/images/pages/N75/alert.png" style="width: 50px; padding-left: 15px;" class="fr-dii fr-draggable">
+	<div class="yellow-alert-body"><span class="yellow-alert-heading"><strong>Alert Title</strong></span>
+		<br><span class="yellow-alert-text"> Description of notice.</span></div>
 </div>
 <br><br>
 <!-- Link List Grouping 3 Column HTML -->
