--- a/custom.html
+++ b/custom.html
@@ -1,224 +1,244 @@
-<!-- Link List -->
 
-<div class="link-list">
-	<a href="#" style="text-decoration: none">
-    	<div class="link-title">
-        Title
-        </div>
-        <div class="link-description">
-        This is a short description. 
-        </div>
-    </a>
-</div>
-<br>
-<br>
+<!-- Link List -->
+<div class="link-list"><a href="#" style="text-decoration: none;">&nbsp;<div class="link-title">Title</div>&nbsp;<div class="link-description">This is a short description.</div>&nbsp;</a></div>
+
+<p data-empty="true">
+	<br>
+</p>
+
+<p data-empty="true">
+	<br>
+</p>
 <!-- Introduction with Contact -->
 <div class="info-wrapper">
-    <div id="main-info">
-	</div>
-    <div id="contact">
-    	Still have questions? Contact:
-        <div class="contact-title"> Title </div>
-                <div class="contact-container">
-					<div class="contact-row">
-        				<div class="contact-icon">
-            				<img style="width:35px" src="/images/pages/N75/phone.png" alt="phone.png">
-            			</div>
-                		<div class="contact-items">
-            				xxx-xxx-xxxx
-            			</div>
-        			</div>
-        			<div class="contact-row">
-        				<div class="contact-icon">
-            				<img style="width:35px" src="/images/pages/N75/email.png" alt="email.png">
-            			</div>
-            			<div class="contact-items">
-					<a style="text-decoration: none; color: #666699" href="mailto:email@rockvillemd.gov">
-					email@rockvillemd.gov</a>
-            			</div>
-        			</div>  
-					<div class="contact-row">
-        				<div class="contact-icon">
-            				<img style="width:35px" src="/images/pages/N75/location.png" alt="location.png">
-            			</div>
-            			<div class="contact-items">
-            				Address
-            			</div>
-       			 	</div>   
-					<div class="contact-row">
-        				<div class="contact-icon">
-            				<img style="width:35px" src="/images/pages/N75/hours.png" alt="hours.png">
-            			</div>
-            			<div class="contact-items">
-            				Hours
-            			</div>
-        			</div>           
-    			</div>
+	<div id="main-info">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras sit amet malesuada quam, id iaculis lorem. Donec sit amet mattis metus. Vivamus dapibus mattis neque, gravida elementum libero placerat ac. Sed eget pulvinar orci, id vestibulum ipsum. Nam at lorem at sapien suscipit egestas nec pretium nisi. Phasellus eleifend sodales condimentum. Mauris ultrices eu eros et pretium. Quisque a elementum est. Maecenas cursus suscipit condimentum. Cras nibh erat, facilisis eu molestie ac, scelerisque eget lectus. Nam consequat hendrerit fermentum. Suspendisse efficitur varius elit, ut pretium quam aliquam vitae. Pellentesque viverra purus eu tristique vehicula.</div>
+	<div id="contact">Still have questions? Contact:
+		<div class="contact-title">Title</div>
+		<div class="contact-container">
+			<div class="contact-row">
+				<div class="contact-icon"><img style="width: 35px;" src="/images/pages/N75/phone.png" alt="phone.png" class="fr-dii fr-draggable"></div>
+				<div class="contact-items">xxx-xxx-xxxx</div>
+			</div>
+			<div class="contact-row">
+				<div class="contact-icon"><img style="width: 35px;" src="/images/pages/N75/email.png" alt="email.png" class="fr-dii fr-draggable"></div>
+				<div class="contact-items"><a href="mailto:email@rockvillemd.gov" style="text-decoration: none; color: #666699;">&nbsp;email@rockvillemd.gov</a></div>
+			</div>
+			<div class="contact-row">
+				<div class="contact-icon"><img style="width: 35px;" src="/images/pages/N75/location.png" alt="location.png" class="fr-dii fr-draggable"></div>
+				<div class="contact-items">Address</div>
+			</div>
+			<div class="contact-row">
+				<div class="contact-icon"><img style="width: 35px;" src="/images/pages/N75/hours.png" alt="hours.png" class="fr-dii fr-draggable"></div>
+				<div class="contact-items">Hours</div>
+			</div>
+		</div>
 	</div>
 </div>
-<br><br>
-<!-- Callout Blue -->
 
-<div class="callout-blue">
-<a href="#" style="text-decoration:none">
-<div class="callout-title">
-Title
-</div>
-<div class="callout-description"><span style="font-weight: normal;">
-Description
-</span></div>
-</a>
-</div>
-<br><br>
+<p data-empty="true">
+	<br>
+</p>
+
+<p data-empty="true">
+	<br>
+</p>
+<!-- Callout Blue -->
+<div class="callout-blue"><a href="#" style="text-decoration:none;">&nbsp;<div class="callout-title">Title</div>&nbsp;<div class="callout-description">Description</div>&nbsp;</a></div>
+
+<p data-empty="true">
+	<br>
+</p>
+
+<p data-empty="true">
+	<br>
+</p>
 <!-- Primary Button -->
 
-<a class="primary-button" href="#" style="text-decoration: none; color: #fff">Button</a>
+<p><a class="primary-button" href="#" style="text-decoration: none; color: #fff;">Button</a></p>
 
-<br><br>
+<p data-empty="true">
+	<br>
+</p>
 <!-- Yellow Alert -->
 <div class="yellow-alert yellow-alert-warning"><img src="/images/pages/N75/alert.png" style="width: 50px; padding-left: 15px;" class="fr-dii fr-draggable">
 	<div class="yellow-alert-body"><span class="yellow-alert-heading"><strong>Alert Title</strong></span>
-		<br><span class="yellow-alert-text"> Description of notice.</span></div>
+		<br><span class="yellow-alert-text">&nbsp;Description of notice.</span></div>
 </div>
-<br><br>
+
+<p data-empty="true">
+	<br>
+</p>
+
+<p data-empty="true">
+	<br>
+</p>
 <!-- Link List Grouping 3 Column HTML -->
-
 <div class="link-list-row-3">
-  <div class="link-list-group">
-   <h3 class="title-text">Categroy Title</h3>
-      Link <img class="img-icon" src="/images/pages/N75/external-link.png">
-  </div>
-  <div class="link-list-group">
-   <h3 class="title-text">Categroy Title</h3>
-      Link <img class="img-icon" src="/images/pages/N75/external-link.png">
-  </div>
-  <div class="link-list-group">
-   <h3 class="title-text">Categroy Title</h3>
-      Link <img class="img-icon" src="/images/pages/N75/external-link.png">
-  </div>
+	<div class="link-list-group"><span class="title-text">Categroy Title</span>
+
+		<p><a href="#" style="text-decoration:none; color: #666;">Link <img class="img-icon fr-dii fr-draggable" src="/images/pages/N75/external-link.png"></a></p>
+	</div>
+	<div class="link-list-group"><span class="title-text">Categroy Title</span>
+
+		<p><a href="#" style="text-decoration:none; color: #666;">Link <img class="img-icon fr-dii fr-draggable" src="/images/pages/N75/external-link.png"></a></p>
+	</div>
+	<div class="link-list-group"><span class="title-text">Categroy Title</span>
+
+		<p><a href="#" style="text-decoration:none; color: #666;">Link <img class="img-icon fr-dii fr-draggable" src="/images/pages/N75/external-link.png"></a></p>
+	</div>
 </div>
-<br><br>
+
+<p data-empty="true">
+	<br>
+</p>
+
+<p data-empty="true">
+	<br>
+</p>
 <!-- Report a Concern HTML -->
+<div class="red-bar">
+	<br>
+</div>
+<div class="report-col"><span class="report-title"><strong>Title</strong></span>
+	<div class="report-row">
+		<div class="report-column">
 
-<div class="red-bar"> 
-</div>  
-  <div class="report-col">
-    <h3 class="report-title">Title</h3>
-  <div class="report-row">
-  <div class="report-column">
-    <p><a href="#" style="text-decoration:none; color: #666">Link <img class="img-icon" src="/images/pages/N75/external-link.png"></a></p>
-    <p><a href="#" style="text-decoration:none; color: #666">Link <img class="img-icon" src="/images/pages/N75/external-link.png"></a></p>
-  </div>
-  <div class="report-column">
-    <p>< href="#" style="text-decoration:none; color: #666">Link <img class="img-icon" src="/images/pages/N75/external-link.png"></a></p>
-  </div>
+			<p><a href="#" style="text-decoration:none; color: #666;">Link <img class="img-icon fr-dii fr-draggable" src="/images/pages/N75/external-link.png"></a></p>
+
+			<p><a href="#" style="text-decoration:none; color: #666;">Link <img class="img-icon fr-dii fr-draggable" src="/images/pages/N75/external-link.png"></a></p>
+		</div>
+		<div class="report-column">
+
+			<p><a href="#" style="text-decoration:none; color: #666;">Link <img class="img-icon fr-dii fr-draggable" src="/images/pages/N75/external-link.png"></a></p>
+
+			<p><a href="#" style="text-decoration:none; color: #666;">Link <img class="img-icon fr-dii fr-draggable" src="/images/pages/N75/external-link.png"></a></p>
+		</div>
+	</div>
 </div>
-</div>
-<br><br>
+
+<p data-empty="true">
+	<br>
+</p>
+
+<p data-empty="true">
+	<br>
+</p>
 <!-- Steps Listing HTML-->
+<div class="info-steps-wrapper">
+	<div class="left-step"><img class="img-col fr-dii fr-draggable" src="/images/pages/N592/1.png"></div>
+	<div class="step-info"><span><h3 class="subhead2 ">Title</h3>&nbsp;Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum non libero id augue&nbsp;</span></div>
+</div>
 
+<p data-empty="true">
+	<br>
+</p>
+
+<p data-empty="true">
+	<br>
+</p>
 <div class="info-steps-wrapper">
-    <div class="left-step">
-         <img class="img-col" src="/images/pages/N592/1.png">
-    </div>
-    <div class="step-info">
-      <span><h3 class="title-step"> Title </h3>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum non libero id augue </span>
-    </div>
+	<div class="left-step"><img class="img-col fr-dii fr-draggable" src="/images/pages/N592/2.png"></div>
+	<div class="step-info"><span><h3 class="subhead2 ">Title</h3>&nbsp;Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum non libero id augue&nbsp;</span></div>
 </div>
-<br><br>
+
+<p data-empty="true">
+	<br>
+</p>
+
+<p data-empty="true">
+	<br>
+</p>
 <div class="info-steps-wrapper">
-    <div class="left-step">
-         <img class="img-col" src="/images/pages/N592/2.png">
-    </div>
-    <div class="step-info">
-      <span><h3 class="title-step"> Title </h3>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum non libero id augue </span>
-    </div>
+	<div class="left-step"><img class="img-col fr-dii fr-draggable" src="/images/pages/N592/3.png"></div>
+	<div class="step-info"><span><h3 class="subhead2 ">Title</h3>&nbsp;Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum non libero id augue&nbsp;</span></div>
 </div>
-<br><br>
+
+<p data-empty="true">
+	<br>
+</p>
+
+<p data-empty="true">
+	<br>
+</p>
 <div class="info-steps-wrapper">
-    <div class="left-step">
-         <img class="img-col" src="/images/pages/N592/3.png">
-    </div>
-    <div class="step-info">
-      <span><h3 class="title-step"> Title </h3>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum non libero id augue </span>
-    </div>
+	<div class="left-step"><img class="img-col fr-dii fr-draggable" src="/images/pages/N836/4.png"></div>
+	<div class="step-info"><span><h3 class="subhead2 ">Title</h3>&nbsp;Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum non libero id augue&nbsp;</span></div>
 </div>
-<br><br>
-<div class="info-steps-wrapper">
-    <div class="left-step">
-         <img class="img-col" src="/images/pages/N836/4.png">
-    </div>
-    <div class="step-info">
-      <span><h3 class="title-step"> Title </h3>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum non libero id augue </span>
-    </div>
-</div>
-<br><br>
+
+<p data-empty="true">
+	<br>
+</p>
+
+<p data-empty="true">
+	<br>
+</p>
+
+<p data-empty="true">
+	<br>
+</p>
+
+<p>
+	<br>
+</p>
+
+<p data-empty="true">
+	<br>
+</p>
 <!-- Callout with Image HTML-->
-
 <div class="col-callout-wrapper">
-    <div class="left-callout-col">
-         <img class="img-callout-col" src="#">
-    </div>
-    <div class="right-callout-col">
-    </div>
+	<div class="left-callout-col"><img class="img-callout-col fr-dii fr-draggable" src="#"></div>
+	<div class="right-callout-col">
+		<br>
+	</div>
 </div>
-
 <!-- Members Table -->
-<table id="members" style="width: 100%">
-  <tr>
-    <th>Name</th>
-    <th>Term Expiration</th>
-  </tr>
-  <tr>
-    <td>Lorem</td>
-    <td>Ipsum</td>
-  </tr>
-  <tr>
-    <td>Lorem</td>
-    <td>Ipsum</td>
-  </tr>
-  <tr>
-    <td>Lorem</td>
-    <td>Ipsum</td>
-  </tr>
-  <tr>
-    <td>Lorem</td>
-    <td>Ipsum</td>
-  </tr>
+
+<table id="members" style="width: 100%;">
+	<thead>
+		<tr>
+			<th>Name</th>
+			<th>Term Expiration</th>
+		</tr>
+	</thead>
+	<tbody>
+		<tr>
+			<td>Lorem</td>
+			<td>Ipsum</td>
+		</tr>
+		<tr>
+			<td>Lorem</td>
+			<td>Ipsum</td>
+		</tr>
+		<tr>
+			<td>Lorem</td>
+			<td>Ipsum</td>
+		</tr>
+		<tr>
+			<td>Lorem</td>
+			<td>Ipsum</td>
+		</tr>
+	</tbody>
 </table>
-
 <!-- Newsletter Callout -->
-<div class="newsletter-row">
-<div class="newsletter-column"> <img class="img-newsletter" src="/ImageRepository/Document?documentID=27424"></div>
-  <div class="newsletter-column">
-  Newsletter Title<br>
-  Value proposition
-  </div>
-<div class="newsletter-column">
-  <a class="newsletter-button" href="#" style="text-decoration: none; color: #fff">Button</a>
-  </div>
-</div>
 
-<! Card Callout -->
-  <aside class="cta-block card3">
-    <a class="cta-link " href="#">
-		  <span class="cta-line1">Camp Guide</span>
-		  <span class="cta-line2">Let's Get Started</span>
-		  <span class="cta-line3">Register Now</span>
-	  </a>
-  </aside>
+<p>
+	<link href="https://cdn.rawgit.com/walke328/city-of-rockville-custom-stylesheet/adbf3129/custom.css" rel="stylesheet">
+</p>
 
-<!-- Information Alert -->
-<div class="blue-alert blue-alert-warning">
-	<img src="/images/pages/N2079/info.png" style="width:50px; padding-left: 15px">
-<div class="blue-alert-body">
-	<h3 class="blue-alert-heading">Applications Currently Closed</h3>
-	<p class="blue-alert-text">We are not currently accepting applications. Applications will be opened on [date].</p>
-</div>
-</div>
-<br>
-<br>
+<table style="width: 100%;">
+	<tbody>
+		<tr>
+			<td style="width: 100%; background-color: rgb(215, 215, 215); padding:20px; border-radius:5px;">
+
+				<h3 class="subhead2" style="text-align: center;">Join our Newsletters</h3>
+				<div style="text-align: center;">Sign up to any of our newsletters to receive information about upcoming events, city news and more.</div>
+				<div data-empty="true" style="text-align: center;">
+					<br>
+				</div>
+				<div style="text-align: center;"><a class="newsletter-button" href="#" rel="noopener" style="text-decoration: none; color: #fff;" target="_blank">Sign Up</a></div>
+			</td>
+		</tr>
+	</tbody>
+</table>
+<!-- Card Callout ---->
+<aside class="cta-block card3"><a class="cta-link " href="#" style="text-decoration:none;">&nbsp;<span class="cta-line1">Camp Guide</span> <span class="cta-line2">Let&#39;s Get Started</span> <span class="cta-line3">Register Now</span>&nbsp;</a></aside>
